force-app/main/default/objects/deletedOppLineItem__c/deletedOppLineItem__c.object-meta.xml
<CustomObject>
    <label>deletedOppLineItem</label>
    <nameField>
        <label>deletedOppLineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>deletedOppLineItem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>