force-app/main/default/objects/deletedOppLineItem__c/fields/datenTime__c.field-meta.xml
<CustomField>
    <fullName>datenTime__c</fullName>
    <label>datenTime</label>
    <type>DateTime</type>
</CustomField>