force-app/main/default/objects/deletedOppLineItem__c/fields/oppId__c.field-meta.xml
<CustomField>
    <fullName>oppId__c</fullName>
    <label>oppId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>