force-app/main/default/objects/deletedOppLineItem__c/fields/oppLineItemID__c.field-meta.xml
<CustomField>
    <fullName>oppLineItemID__c</fullName>
    <label>oppLineItemID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>